# powersearch

./: .gitignore  README.md  package-lock.json
file-server/: main.py  requirements.txt  test_inde_server.py
file-server/file_monitor/: db.py  event_handler.py  event_types.py  file_event_handlers.py  push_to_index.py  store.py  utils.py
file_server/: README.md  requirements.txt  server.py  test_inde_server.py
file_server/file_monitor/: __init__.py  config.py  file_event_handlers.py  push_to_index.py  watcher.py
frontend/powersearch/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/powersearch/src/: index.css  main.ts  preload.ts  renderer.tsx
frontend/powersearch/src/components/: SearchApp.tsx
indexing-server/: .cursorrules.md  .env.example  README.md  app.py  config.py  constants.py  database.py  docker-compose.yml  models.py  prompts.py  pyproject.toml  routes.py  services.py
