[project]
name = "indexing-server"
version = "0.1.0"
description = "FastAPI indexing server for vector embeddings with Qdrant and Ollama"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi (>=0.116.1,<0.117.0)", "pydantic (>=2.11.7,<3.0.0)", "pydantic-settings (>=2.10.1,<3.0.0)", "qdrant-client (>=1.15.0,<2.0.0)", "litellm (>=1.74.7,<2.0.0)", "python-dotenv (>=1.1.1,<2.0.0)", "httpx (>=0.28.1,<0.29.0)", "python-multipart (>=0.0.20,<0.0.21)", "uvicorn (>=0.35.0,<0.36.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
